src- Version 4.19/objects/Discount_Code__c.object
<CustomObject>
    <customHelpPage>support</customHelpPage>
    <description>Holds the Discount corresponding to Product  Families and for a given validity.</description>
    <fields>
        <fullName>Apply_to__c</fullName>
        <label>Apply to</label>
        <picklist>
            <picklistValues>
                <fullName>Quote/Order level</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Charge level</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Currency__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Currency</label>
        <referenceTo>Currency__c</referenceTo>
        <relationshipName>Discounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Customer_Class__c</fullName>
        <description>Choose the customer class for whom this discount has to be applied to.</description>
        <inlineHelpText>Choose the customer class for whom this discount has to be applied to.</inlineHelpText>
        <label>Customer Class</label>
        <picklist>
            <picklistValues>
                <fullName>*</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Default</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Retail</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Discount_Percent__c</fullName>
        <label>Discount Percent</label>
        <precision>6</precision>
        <scale>3</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Discount_Value__c</fullName>
        <label>Discount Value</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Price_Type__c</fullName>
        <label>Price Type</label>
        <picklist>
            <picklistValues>
                <fullName>*</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>One Time</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Weekly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Monthly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Quarterly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Half Yearly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Annual</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Priority__c</fullName>
        <label>Priority</label>
        <picklist>
            <picklistValues>
                <fullName>0</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Product_Family__c</fullName>
        <label>Product Family</label>
        <picklist>
            <picklistValues>
                <fullName>*</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Default</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Valid_From__c</fullName>
        <label>Valid From</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Valid_To__c</fullName>
        <label>Valid To</label>
        <type>Date</type>
    </fields>
    <label>Discount Code</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Apply_to__c</columns>
        <columns>Currency__c</columns>
        <columns>Product_Family__c</columns>
        <columns>Discount_Percent__c</columns>
        <columns>Discount_Value__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Discount Code</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Discount Codes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Both_discounts_cannot_be_blank</fullName>
        <active>true</active>
        <errorConditionFormula>ISBLANK(Discount_Percent__c) &amp;&amp; ISBLANK(Discount_Value__c )</errorConditionFormula>
        <errorMessage>You should either enter a discount percentage or a discount value</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Discount_percent_and_value</fullName>
        <active>true</active>
        <errorConditionFormula>Discount_Percent__c &gt; 0 &amp;&amp;  Discount_Value__c  &gt; 0</errorConditionFormula>
        <errorMessage>You can create a configuration with either a discount percentage or a discount value, but not both.</errorMessage>
    </validationRules>
</CustomObject>